--- a/packages/ui/src/components/button/button.module.css
+++ b/packages/ui/src/components/button/button.module.css
@@ -1,3 +1,12 @@
 .button {
   padding: 20px;
+  border: 2px solid #f00 !important;
+}
+
+.primary {
+  background: #34d471;
+}
+
+.secondary {
+  background: rgb(255, 88, 166);
 }
